@@ -1,17 +1,16 @@
 # Note: this file was auto-generated by Module::Build::Compat version 0.03
-# Generated by Module::Build::Compat->create_makefile_pl
-
 use ExtUtils::MakeMaker;
 WriteMakefile
-  (
-   NAME         => 'ExtUtils::CBuilder',
-   VERSION_FROM => 'lib/ExtUtils/CBuilder.pm',
-   PL_FILES     => {},
-   INSTALLDIRS  => 'site',
-   PREREQ_PM    => {
-		    'File::Spec' => '0',
-		    'File::Basename' => '0',
-		    'Test' => '0',
-		   },
-   NO_META => 1,
-  );
+(
+          'NAME' => 'ExtUtils::CBuilder',
+          'VERSION_FROM' => 'lib/ExtUtils/CBuilder.pm',
+          'PREREQ_PM' => {
+                           'File::Spec' => 0,
+                           'File::Basename' => 0,
+                           'Test' => 0
+                         },
+          'INSTALLDIRS' => 'site',
+          'PL_FILES' => {},
+          'NO_META' => 1,
+        )
+;
