@@ -5,6 +5,10 @@ Revision history for Perl extension ExtUtils::CBuilder.
  - Fixed a bug in .../Platform/Windows.pm, in which compile() was
    ignoring an 'include_dirs' argument.  [Randy Sims]
 
+ - Fixed a bug in .../Platform/Windows.pm, in which output files were
+   being created in the root directory \ when they should be created
+   in the current directory. [Randy Sims]
+
 0.01  Mon Jan 12 08:12:35 CST 2004
 
  - Original release, taken from Module::Build's C-building code, with
